--- a/trig/package.json
+++ b/trig/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@p5-wrapper/react": "^5.0.0-rc.2",
     "katex": "^0.16.22",
+    "mafs": "^0.21.0",
+    "mathjs": "^14.4.0",
     "p5": "^1.11.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
