--- a/math-viz/package.json
+++ b/math-viz/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@p5-wrapper/react": "^5.0.0-rc.2",
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.1",
+    "@vanilla-extract/css": "^1.17.1",
     "katex": "^0.16.22",
     "mafs": "^0.21.0",
     "mathjs": "^14.4.0",
@@ -27,6 +29,7 @@
     "@eslint/js": "^9.24.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@vanilla-extract/vite-plugin": "^5.0.1",
     "@vitejs/plugin-react": "^4.4.0",
     "eslint": "^9.24.0",
     "eslint-plugin-react-hooks": "^5.2.0",
